edit overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body {
   padding: 20px;
   margin: 3rem auto;
   box-shadow: rgba(14, 30, 37, 0.12) 0 2px 4px 0, rgba(14, 30, 37, 0.32) 0 2px 16px 0;
-  height: 80vh;
+  height: 90vh;
   width: 80vw;
   font-family: 'Baloo Thambi', cursive;
 }
